--- a/index.ipynb
+++ b/index.ipynb
@@ -186,11 +186,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-6-e61c1f48898e>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-e61c1f48898e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return {'m_values': m_values, 'rss_values': rss_values}\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
-    "def rss_values(x_values, y_values, m_values, b):\n",
+    "def rss_values(x_values, y_values, m_values, b):rss_values = list(map(lambda m_value: residual_sum_squares(x_values, y_values, m_value, b), m_values))\n",
+    "    return {'m_values': m_values, 'rss_values': rss_values}\n",
     "    pass"
    ]
   },
